[package]
name = "claimdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
http = "1.1.0"
postgrest = "1.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
solana-cli-config = "1.18.11"
solana-client = "1.18.11"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-0_8"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }